<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PitDroid</string>
    <string name="menu_settings">Settings</string>
    <string name="service_name">Status Service</string>
    <string name="fan_speed">Fan:</string>
    <string name="alarm">Alarm</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="alarm_service_info">Monitoring probe alarms</string>
    <string name="backgroundUpdateTimeSummary">Interval in minutes for background updates</string>
    <string name="backgroundUpdateTimeTitle">Background update time</string>
    <string name="lastUpdate">Last update:</string>
    <string-array name="backgroundUpdateText">
        <item >1 minute</item>
        <item >5 minutes</item>
        <item >10 minutes</item>
        <item >15 minutes</item>
        <item >20 minutes</item>
        <item >25 minutes</item>
        <item >30 minutes</item>
    </string-array>
    <string-array name="backgroundUpdateValues">
        <item >1</item>
        <item >5</item>
        <item >10</item>
        <item >15</item>
        <item >20</item>
        <item >25</item>
        <item >30</item>
    </string-array>
        <string name="serverSummary">The address of the HeaterMeter</string>
        <string name="serverTitle">Server</string>
        <string name="altServerSummary">An optional alternate address for the HeaterMeter that will be tried if the first address isn\'t reachable</string>
        <string name="altServerTitle">Alternate Server</string>
        <string name="alwaysSoundAlarmTitle">Always use alarm sound</string>
        <string name="alwaysSoundAlarmSummary">Always use alarm sounds, even when in vibrate or silent mode</string>
        <string name="no_server">Unable to contact server</string>
        <string name="alarmOnLostConnectionTitle">Alarm on lost connection</string>
        <string name="alarmOnLostConnectionSummary">Sound an alarm when a connection to the server can\'t be established.</string>
        <string name="pitSetTempSummary">Change the pit set temp.  Only works when the admin password is set and you are connected to the HeaterMeter.</string>
        <string name="pitSetTempTitle">Pit set temp</string>
        <string name="keepScreenOnSummary">Keep the screen on while PitDroid is running.</string>
        <string name="keepScreenOnTitle">Keep screen on</string>
        
</resources>