<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:inputType="textUri"
        android:key="server"
        android:summary="@string/serverSummary"
        android:title="@string/serverTitle" />
    <EditTextPreference
        android:inputType="textUri"
        android:key="altServer"
        android:summary="@string/altServerSummary"
        android:title="@string/altServerTitle" />
    <EditTextPreference
        android:inputType="textPassword"
        android:key="adminPassword"
        android:summary="The admin password"
        android:title="Admin password" />

    <ListPreference
        android:defaultValue="15"
        android:entries="@array/backgroundUpdateText"
        android:entryValues="@array/backgroundUpdateValues"
        android:key="backgroundUpdateTime"
        android:summary="@string/backgroundUpdateTimeSummary"
        android:title="@string/backgroundUpdateTimeTitle" />

    <EditTextPreference
        android:defaultValue="50"
        android:inputType="numberDecimal"
        android:key="minTemp"
        android:title="Minimum temperature" />

    <EditTextPreference
        android:defaultValue="350"
        android:inputType="numberDecimal"
        android:key="maxTemp"
        android:title="Maximum temperature" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="alwaysSoundAlarm"
        android:summary="@string/alwaysSoundAlarmSummary"
        android:title="@string/alwaysSoundAlarmTitle" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="alarmOnLostConnection"
        android:summary="@string/alarmOnLostConnectionSummary"
        android:title="@string/alarmOnLostConnectionTitle" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="keepScreenOn"
        android:summary="@string/keepScreenOnSummary"
        android:title="@string/keepScreenOnTitle" />

</PreferenceScreen>